--- a/src/main/resources/hudson/scm/subversion/Messages_zh_TW.properties
+++ b/src/main/resources/hudson/scm/subversion/Messages_zh_TW.properties
@@ -50,7 +50,7 @@ SubversionSCM.pollChanges.locationsNoLongerExist=\
 SubversionSCM.pollChanges.locationNotInWorkspace=\
   \u5de5\u4f5c\u5340\u88e1\u6c92\u6709 {0}\u3002\u9700\u8981\u5efa\u7f6e\u4e00\u6b21\u3002
 SubversionSCM.pollChanges.remoteRevisionAt=\
-  {0} \u7684\u4fee\u8a02\u7248\u6b21\u4e0d\u662f {1}
+  {0} \u7684\u4fee\u8a02\u7248\u6b21\u70ba {1}
 SubversionSCM.pollChanges.changedFrom=\
   \ \ (\u524d\u4e00\u7248\u6b21 {0})
 SubversionSCM.pollChanges.ignoredRevision=\
